[project]
name = "media-renamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "typer>=0.21.1",
]

[project.scripts]
media-renamer = "utils:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"